fix default values from test

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -13,8 +13,8 @@
     <div class="content">
         <div id="calculator">
             <div id="top">
-                <div id="preview">12+2</div>
-                <div id="display">14</div>
+                <div id="preview"></div>
+                <div id="display"></div>
             </div>
             <div id="buttons">
                 <div class="buttonsRow" id="row1">
